tests/NormalTests/paczka2/big_fuzzy/44039357.err
Error in line 4: Ywk A28 13,8
Error in line 3: TnOFvha S209 60,8
Error in line 23: FVyi0 A28 76,7
Error in line 25: Ywk A28 6,3
Error in line 22: UqIU A28 7,6
Error in line 28: TnOFvha A612 11,9
Error in line 48: A612 S209 142,4
Error in line 50: A612 S716 29,4
Error in line 53: TnOFvha A612 -3,7
Error in line 54: A612 S209 -3,8
Error in line 51: TnOFvha A612 77,8
Error in line 56: TnOFvha S209 14,9
Error in line 64: ZXn3txSK A28 90,3
Error in line 65: ZXn3txSK S209 52,3
Error in line 61: UqIU S209 76,2
Error in line 67: FVyi0 S209 16,2
Error in line 69: ZXn3txSK S716 50,0
Error in line 68: A612 S209 9,1
Error in line 75: ZXn3txSK A612 15,9
Error in line 84: yWArCVFP A612 714,9
Error in line 101: FVyi0 S716 92,4
Error in line 103: A612 A28 34,8
Error in line 110: FVyi0 S209 6,1
Error in line 117: yWArCVFP S209 76,0
Error in line 115: TnOFvha S209 71,5
Error in line 122: TnOFvha A28 27,7
Error in line 124: ZXn3txSK S209 2,1
Error in line 121: UqIU A612 234,1
Error in line 128: FVyi0 A6å2 3å,9
Error in line 125: ZXn3txSK A28 38,5
Error in line 118: FVyi0 A612 6,4
Error in line 99: Ywk A28 75,5
Error in line 134: FVyi0 S716 38,8
Error in line 140: FVyi0 S209 69,8
Error in line 149: TnOFvha A28 98,9
Error in line 152: TnOFvha A612 37,4
Error in line 142: A612 S209 33,6
Error in line 161: ZXn3txSK S209 45,6
Error in line 190: FVyi0 A28 46,6
Error in line 186: Ywk A28 74,0
Error in line 192: ZXn3txSK S209 57,7
Error in line 196: Ywk A612 61,8
Error in line 195: FVyi0 A612 49,0
Error in line 197: ZXn3txSK A612 34,9
Error in line 208: FVyi0 S716 54,5
Error in line 220: FVyi0 A28 86,2
Error in line 221: Ywk S716 94,6
Error in line 232: Ywk S716 9i,9
Error in line 230: ZXn3txSK S209 28,4
Error in line 236: TnOFvha A612 75,37
Error in line 237: yWArCVFP S209 66,9
